name:                grin
version:             0.1.0.0
homepage:            https://github.com/andorp/mini-grin
license:             BSD3
license-file:        LICENSE
author:              Andor Penzes, Csaba Hruska, Peter Podlovics
maintainer:          andor.penzes@gmail.com
copyright:           2017 Andor Penzes, Csaba Hruska, Peter Podlovics
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Wno-orphans
  exposed-modules:
    Grin.Value
    Grin.TypeEnv
    Grin.Exp
    Grin.GExp
    Grin.GExpToExp
    Grin.Examples
    Grin.Pretty
    Grin.Interpreter.Env
    Grin.Interpreter.Store
    Grin.Interpreter.Base
    Grin.Interpreter.Definitional
    Grin.Interpreter.Abstract
--    Transformations.Optimising.SimpleDeadFunctionElimination
--    Transformations.Optimising.SimpleDeadVariableElimination
--    Transformations.Optimising.SimpleDeadParameterElimination
--    Transformations.Optimising.SparseCaseOptimisation
    Tutorial.Chapter01.Exercise01
    Tutorial.Chapter01.Exercise02

  build-depends:
    base >=4.11,
    containers,
    mtl,
    vector,
    deepseq,
    recursion-schemes,
    ansi-wl-pprint,
    bytestring,
    transformers,
    microlens,
    microlens-mtl,
    microlens-th,
    microlens-platform,
    text,
    functor-infix,
    binary,
    logict

  default-language:    Haskell2010

executable grin
  hs-source-dirs:      app
  main-is:             GrinCLI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.11
                     , grin
                     , transformers

  default-language:    Haskell2010

test-suite grin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11
                     , hspec
                     , hspec-core
                     , hspec-discover
                     , hspec-expectations
                     , transformers
                     , grin
  other-modules:
    Tutorial.Chapter01.Exercise01Spec
    Tutorial.Chapter01.Exercise02Spec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andorp/mini-grin
