name:                grin
version:             0.1.0.0
homepage:            https://github.com/andorp/mini-grin
license:             BSD3
license-file:        LICENSE
author:              Andor Penzes, Csaba Hruska, Peter Podlovics
maintainer:          andor.penzes@gmail.com
copyright:           2017 Andor Penzes, Csaba Hruska, Peter Podlovics
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Wno-orphans
  exposed-modules:
    Data.Functor.FoldableM
    Grin.Analysis.BoqHPT
    Grin.CheatSheet
    Grin.Datalog
    Grin.Examples
    Grin.Exp
    Grin.GExp
    Grin.GExpToExp
    Grin.Interpreter.Abstract.Base
    Grin.Interpreter.Abstract.Interpreter
    Grin.Interpreter.Abstract.TypeInference
    Grin.Interpreter.Base
    Grin.Interpreter.Definitional
    Grin.Interpreter.Env
    Grin.Interpreter.Store
    Grin.Pipeline.Base
    Grin.Pretty
    Grin.Transformation.Base
    Grin.Transformation.DeadParameterElimination
    Grin.Transformation.DeadVariableElimination
    Grin.TypeEnv.Convert
    Grin.TypeEnv.Intermediate
    Grin.TypeEnv.Result
    Grin.Value
    Tutorial.Chapter01.Exercise01
    Tutorial.Chapter01.Exercise02
    Tutorial.Chapter02.Exercise01
    Tutorial.Chapter02.Exercise02
    Tutorial.Chapter03.Exercise01
    Tutorial.Chapter03.Exercise02

  build-depends:
    base >=4.11,
    containers,
    mtl,
    vector,
    deepseq,
    recursion-schemes,
    ansi-wl-pprint,
    bytestring,
    transformers,
    microlens,
    microlens-mtl,
    microlens-th,
    microlens-platform,
    text,
    functor-infix,
    binary,
    logict,
    filepath,
    process,
    split,
    directory,
    free,
    comonad

  default-language:    Haskell2010

executable grin
  hs-source-dirs:      app
  main-is:             GrinCLI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.11
                     , grin
                     , transformers

  default-language:    Haskell2010

test-suite grin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11
                     , hspec
                     , hspec-core
                     , hspec-discover
                     , hspec-expectations
                     , transformers
                     , containers
                     , grin
  other-modules:
    Tutorial.Chapter01.Exercise01Spec
    Tutorial.Chapter01.Exercise02Spec
    Tutorial.Chapter02.Exercise01Spec
    Tutorial.Chapter02.Exercise02Spec
    Tutorial.Chapter03.Exercise01Spec
    Tutorial.Chapter03.Exercise02Spec

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andorp/mini-grin
